add: get Role & get Devisi
